# candle-demo

./: .cursorrules  .gitignore  Cargo.toml  README.md  package.json
.trae/skills/build-wasm/: SKILL.md
.trae/skills/run-dev/: SKILL.md
frontend/: eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: AppContainer.vue  HelloWorld.vue
frontend/src/router/: index.ts
frontend/src/utils/: modelFileCache.ts  workerHelper.ts  workerManager.ts
frontend/src/views/: DashboardView.vue  HomeView.vue  NotFoundView.vue
frontend/src/views/chat/: ChatView.vue  constants.ts  index.vue  modelList.ts  wasmWorker.ts
frontend/src/wasm-pkg/qwen3/: candle_wasm_example_quant_qwen3.d.ts  candle_wasm_example_quant_qwen3.js  candle_wasm_example_quant_qwen3_bg.js  candle_wasm_example_quant_qwen3_bg.wasm.d.ts  package.json
wasm/: Cargo.toml  package.json  pnpm-lock.yaml
wasm/chat-template/: Cargo.toml
wasm/qwen3/: Cargo.toml  README.md
wasm/qwen3/.cargo/: config.toml
wasm/qwen3/src/: lib.rs  m.rs  profiler.rs
wasm/src/: lib.rs
