[package]
name = "wasm-qwen3"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
#simd-flash-attn = ["candle-nn/simd-flash-attn", "candle-transformers/simd-flash-attn"]

[dependencies]
candle = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true} #, features = ["simd-flash-attn"] }
tokenizers = { workspace = true, features = ["unstable_wasm"] }
num-traits = { workspace = true }

# Shared chat template support
candle_wasm_chat_template = { path = "../chat-template", package = "wasm-chat-template", version = "0.1.0" }

# App crates.
anyhow = { workspace = true }
byteorder = { workspace = true }
getrandom = { version = "0.3", features = ["wasm_js"], default-features = false }
image = { workspace = true }
log = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
libc = "0.2"

# Wasm specific crates.
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.114"
js-sys = "0.3.64"
web-sys = { version = "0.3.70", features = ["console", "Window", "Performance"] }
